tests-integration/fixtures/checking/147_derive_functor_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Wrap ::
  forall (t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)).
    (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)) ->
    Wrap @(t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type))
WrapNoFunctor ::
  forall (t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)).
    (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)) ->
    WrapNoFunctor @(t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type))

Types
Wrap :: forall (t4 :: Type). ((t4 :: Type) -> Type) -> (t4 :: Type) -> Type
WrapNoFunctor :: forall (t10 :: Type). ((t10 :: Type) -> Type) -> (t10 :: Type) -> Type

Data
Wrap
  Quantified = :1
  Kind = :0

WrapNoFunctor
  Quantified = :1
  Kind = :0


Roles
Wrap = [Representational, Nominal]
WrapNoFunctor = [Representational, Nominal]

Derived
derive Functor (&0 :: Type -> Type) => Functor (Wrap @Type (&0 :: Type -> Type) :: Type -> Type)
derive Functor (WrapNoFunctor @Type (&0 :: Type -> Type) :: Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (&0 :: Type -> Type)
  --> 9:1..9:42
  |
9 | derive instance Functor (WrapNoFunctor f)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
